[gd_scene load_steps=11 format=2]

[ext_resource path="res://debug_tools/console/console_label.gd" type="Script" id=1]
[ext_resource path="res://debug_tools/console/console_input.gd" type="Script" id=2]
[ext_resource path="res://debug_tools/console/console.gd" type="Script" id=3]
[ext_resource path="res://debug_tools/console/style/scrollbar_theme.tres" type="Theme" id=4]
[ext_resource path="res://debug_tools/console/style/Hack-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxLine" id=11]
color = Color( 1, 1, 1, 0.443137 )
thickness = 4

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0.243137 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.207843, 0.207843, 0.207843, 0.6 )

[sub_resource type="StyleBoxEmpty" id=12]

[node name="Console" type="VBoxContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -185.5
margin_right = 185.5
margin_bottom = 161.0
rect_clip_content = true
script = ExtResource( 3 )
commands_directory_path = "res://debug_tools/console/commands"

[node name="Header" type="Label" parent="."]
margin_right = 371.0
margin_bottom = 14.0
size_flags_vertical = 5
text = "CONSOLE"
align = 1
valign = 1
uppercase = true

[node name="Separator" type="Panel" parent="."]
margin_top = 18.0
margin_right = 371.0
margin_bottom = 23.0
rect_min_size = Vector2( 5, 5 )
size_flags_vertical = 5
custom_styles/panel = SubResource( 11 )

[node name="OutputLabel" type="RichTextLabel" parent="."]
margin_top = 27.0
margin_right = 371.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_fonts/normal_font = SubResource( 16 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
bbcode_enabled = true
scroll_following = true
script = ExtResource( 1 )

[node name="Separator2" type="Panel" parent="."]
margin_top = 132.0
margin_right = 371.0
margin_bottom = 137.0
rect_min_size = Vector2( 5, 5 )
size_flags_vertical = 5
custom_styles/panel = SubResource( 11 )

[node name="InputPanel" type="Panel" parent="."]
margin_top = 141.0
margin_right = 371.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.19
custom_styles/panel = SubResource( 15 )

[node name="InputLabel" type="TextEdit" parent="InputPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.19
custom_styles/normal = SubResource( 12 )
text = "Input Command..."
syntax_highlighting = true
script = ExtResource( 2 )
command_color = Color( 0.0235294, 0.541176, 1, 1 )

[connection signal="hide" from="." to="." method="_on_Console_hide"]
[connection signal="visibility_changed" from="OutputLabel" to="OutputLabel" method="_on_ConsoleLabel_visibility_changed"]
[connection signal="command_entered" from="InputPanel/InputLabel" to="." method="_on_InputLabel_command_entered"]
[connection signal="focus_entered" from="InputPanel/InputLabel" to="InputPanel/InputLabel" method="_on_InputLabel_focus_entered"]
[connection signal="text_changed" from="InputPanel/InputLabel" to="InputPanel/InputLabel" method="_on_InputLabel_text_changed"]
[connection signal="visibility_changed" from="InputPanel/InputLabel" to="InputPanel/InputLabel" method="_on_InputLabel_visibility_changed"]
